--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@ngrx/store": "^7.2.0",
     "@ngrx/store-devtools": "^7.2.0",
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "firebase": "^5.8.1",
+    "ng2-charts": "^2.0.3",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.32.2",
     "zone.js": "~0.8.26"
